added security context and other changes
